--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <span>L</span>
         <span>L</span>
         <span>O</span>
-        <span>K</span>
+        <span>B</span>
         <span>A</span>
-        <span>M</span>
-        <span>U</span>
+        <span>A</span>
+        <span>N</span>
     </div>
     <div class="description">
         <span>Aku punya hadiah spesial buat kamu nih....</span>
