--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
         <span>L</span>
         <span>L</span>
         <span>O</span>
-        <span>B</span>
+        <span>K</span>
         <span>A</span>
-        <span>A</span>
-        <span>N</span>
+        <span>M</span>
+        <span>U</span>
     </div>
     <div class="description">
-        <span>Aku punya hadiah spesial buat kamu nih....</span>
+        <span>Aku punya hadiah spesial buat kamu nih...</span>
     </div>
     <div class="button">
         <button>
-            <a href="flower.html">Klik disini</a>
+            <a href="flower.html">Klik dimarih</a>
         </button>
         
     </div>
